[package]
name = "prompt-rs"
version = "0.1.0"
authors = ["echnobas <60543166+echnobas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getch = "0.2.1" # A portable implementation of getch, using _getch on Windows, and termios on Unix.
thiserror = "1.0.22" # derive(Error)
